# Gruvbox_Studio

./: .env.example  .gitignore  .neoignore  .stylelintrc.json  AGENTS.md  LICENSE  README.md  forge.config.js  neo.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
.github/: PULL_REQUEST_TEMPLATE.md
assets/: toolbar-ascii-variants.ts
docs/: ARCHIVE_PARITY.md  CHAT_MODEL_CONTRACT.md  CHECKLIST.md  DiffViewer-README.md  GIT_COMMANDS_IMPLEMENTATION.md  GIT_HISTORY_POLICY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  MonacoTripleDiffEditorParity.md  QUICKSTART.md  README.md  RUST_MIGRATION_PLAN.md  WORKSPACE_DETECTION_FIX.md  architecture.md  code-quality-metrics.md  development-workflow.md  git-README.md  git-branch-parsing.md  pi-integration-debug.md  pi-parity-matrix.md  pi-windows-tools.md  testing.md  troubleshooting.md
landing/: index.html  robots.txt  sitemap.xml
resources/: app-icon.icns
rust-sidecar/: Cargo.toml  README.md
rust-sidecar/src/: diff_parser.rs  error.rs  file_ops.rs  git_commit_graph.rs  lib.rs  markdown.rs  merge_resolver.rs  watcher.rs
scripts/: build-macos-app-icon.sh  build-production-package.sh  build-rust-addon.cjs  build-rust-sidecar.cjs  build.sh  cleanup-orphan-ai.cjs  copy-rust-native.cjs  create-git-history-archive.ps1  ensure-e2e-package.cjs  ensure-e2e-webpack.cjs  escape-toolbar-ascii-variants.mjs  generate-e2e-scenario-backlog.cjs  inline-landing-icons.py  run-agent-qa.cjs  (+7 more)
(+372 files in other folders)
