[package]
name = "gruvbox-file-ops"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
notify = "6.1"
pulldown-cmark = "0.11"
ammonia = "4"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
tempfile = "3.8"
